version/0.4.0b2/_sources/api/ansys/sam/sysml2/builder/mapper/sysml_mapper/SysMLMapper.rst.txt






:class:`SysMLMapper`
====================


.. py:class:: ansys.sam.sysml2.builder.mapper.sysml_mapper.SysMLMapper

   Bases: :py:obj:`ansys.sam.sysml2.builder.mapper.mapper.Mapper`


   
   JSON mapper for SysML meta-model elements.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SysMLMapper

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~map`
            - Map the JSON into a python element.



   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~class_cache`
            - 






Import detail
-------------

.. code-block:: python

    from ansys.sam.sysml2.builder.mapper.sysml_mapper import SysMLMapper


Attribute detail
----------------

.. py:attribute:: class_cache



Method detail
-------------

.. py:method:: map(json_element: dict, mapped_element: ansys.sam.sysml2.meta_model.element.Element, resolve_libraries: bool = False) -> ansys.sam.sysml2.classes.mapped_element.MappedElement

   
   Map the JSON into a python element.


   :Parameters:

       **json_element** : :class:`python:dict`
           Element data.

       **mapped_element** : :obj:`Element`
           Existing element.

       **resolve_libraries** : :ref:`bool <python:bltin-boolean-values>`, default: :data:`python:False`
           When ``True``, keep library elements' unresolved references so their contents
           are resolved and mapped.



   :Returns:

       :obj:`MappedElement`
           Mapped element.











   ..
       !! processed by numpydoc !!




